--- a/assets/main.css
+++ b/assets/main.css
@@ -17,7 +17,8 @@
 
 *{
     border:0;
-    font:inherit;
+/*    font:inherit; */
+    font:'libertine';
     font-size:1em;
     margin:0;
     padding:0;
@@ -30,7 +31,8 @@ body{
     background-attachment: fixed;
     color: #505050; 
     text-align:left;
-    font-family:'Roboto',sans-serif;
+/*    font-family:'Roboto',sans-serif; */
+    font-family:'libertine';
     font-size:1em;
     line-height:1.5em;
     margin: 60px auto;
@@ -79,11 +81,11 @@ th,td{
 /* Website Banner */
 .banner {position: relative; font-family:'Roboto Slab',serif;}
 .top-left {font-size:5.33em; color: #505050; background: #fafafa; text-align: center; width: 1000px; height: 67px; position: absolute; padding: 36px 0 0 0; top: 0px;}
-.bottom-right {font-size:2.33em; color: #fafafa; line-height: 1.5em; width: auto; height: 100px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
+.bottom-right {font-size:2.33em; color: #fafafa; line-height: 1.5em; width: auto; height: 220px; padding: 0px 27px 27px 0px; text-align: right; position: absolute; bottom: 0px; right: 0px; text-shadow: 0px 0px 6px #000000;}
 
 /* Conference Title Logo */
-.title1{color: #b2132e; text-shadow: 1px 1px 3px #c0c0c0;} 
-.title2{color: #52739e; text-shadow: 1px 1px 3px #c0c0c0;}
+.title1{color: rgb(12, 87, 26); text-shadow: 1px 1px 3px #c0c0c0;} 
+.title2{color: #e884d0; text-shadow: 1px 1px 3px #c0c0c0;}
 .year{color: #505050; font-size:0.67em; font-weight: lighter;}
 
 /* Navigation Links (Home, Registration, etc) */
